--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "browser-image-compression": "^2.0.2",
     "crypto-js": "^4.2.0",
     "firebase": "^11.0.1",
     "js-cookie": "^3.0.5",
