--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^11.0.1",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "qr-code-styling": "^1.8.4",
     "qrcode.react": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
